--- a/package.json
+++ b/package.json
@@ -1,25 +1,15 @@
 {
-  "name": "bun-template",
+  "name": "compress-to-url",
   "module": "src/index.ts",
-  "description": "Bun template for creating projects using bunjs",
-  "version": "1.0.66",
-  "keywords": [
-    "bun",
-    "bunjs",
-    "typescript",
-    "template",
-    "npm",
-    "np",
-    "publish",
-    "git"
-  ],
+  "description": "Compress HTML to fit in a URL.",
+  "version": "1.0.0",
+  "keywords": [],
   "repository": {
     "type": "git",
-    "url": "git@github.com:jacklehamster/bun-template.git"
+    "url": "https://github.com/jacklehamster/compress-to-url.git"
   },
-  "homepage": "https://jacklehamster.github.io/bun-template/",
   "author": {
-    "name": "Jack Le Hamster",
+    "name": "Vincent Le Quang",
     "email": "jacklehamster@gmail.com"
   },
   "license": "MIT",
