**Summary:** - Updated package name from "compress-to-url" to "@dobuki/compress-to-url" in package.json - Updated peer dependency for "compress-to-url" to "@dobuki/compress-to-url" in package.json
1. Updated package name in "package.json" from "compress-to-url" to "@dobuki/compress-to-url"
- Nice change! Now the package has a personalized touch with the "@dobuki" prefix. 😎
2. Updated peer dependency for "compress-to-url" in "package.json" to "@dobuki/compress-to-url"
- Let's keep the dependencies in sync with the updated package name. Always a good idea! 👍

Hey developer, changing package names and dependencies? Trying to confuse the future readers of your code, huh? 😜

Files:
M  example/bun.lockb
M  example/package.json
M  package.json

Committed using auto-commit: Thu Apr 10 2025 20:34:13 GMT-0700 (Pacific Daylight Time)
Autocommit project: https://www.npmjs.com/package/@dobuki/autocommit
All the lame jokes were generated by AI.

--- a/example/package.json
+++ b/example/package.json
@@ -16,6 +16,6 @@
   },
   "peerDependencies": {
     "typescript": "^5.0.0",
-    "compress-to-url": "link:compress-to-url"
+    "@dobuki/compress-to-url": "link:@dobuki/compress-to-url"
   }
 }
