--- a/example/package.json
+++ b/example/package.json
@@ -16,6 +16,6 @@
   },
   "peerDependencies": {
     "typescript": "^5.0.0",
-    "@dobuki/compress-to-url": "link:@dobuki/compress-to-url"
+    "compress-to-url": "link:compress-to-url"
   }
 }
